--- a/build.gradle
+++ b/build.gradle
@@ -25,8 +25,10 @@ repositories {
 dependencies {
     compile('org.springframework.boot:spring-boot-starter')
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
-    compile group: 'org.springframework.security.oauth', name: 'spring-security-oauth2', version: '2.3.4.RELEASE'
+//    compile group: 'org.springframework.security.oauth', name: 'spring-security-oauth2', version: '2.3.4.RELEASE'
 //    compile('org.springframework.security.oauth:spring-security-oauth2')
+    // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-security
+    compile group: 'org.springframework.cloud', name: 'spring-cloud-security', version: '2.0.1.RELEASE'
     compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 
