--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,8 @@ repositories {
 dependencies {
     compile('org.springframework.boot:spring-boot-starter')
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    // https://mvnrepository.com/artifact/org.springframework.session/spring-session-jdbc
+    compile group: 'org.springframework.session', name: 'spring-session-jdbc', version: '2.1.3.RELEASE'
 //    compile group: 'org.springframework.security.oauth', name: 'spring-security-oauth2', version: '2.3.4.RELEASE'
 //    compile('org.springframework.security.oauth:spring-security-oauth2')
     // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-security
